Fixed socialMedia alignment

--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,3 @@
   font-style: none;
   text-decoration: none;
 }
-
-.post a {
-  color: #f45b69;
-  font-style: none;
-  text-decoration: none;
-}
-
-a:hover {
-  font-weight: bold;
-}
